# merge-pdf-files

./: README.md  main.py  pyproject.toml  start.py
app/: __init__.py  settings.py
app/pdf/: __init__.py  pdf.py
