[tool.poetry]
name = "merge-pdf-files"
version = "0.1.0"
description = ""
authors = ["abdoulfataoh <abdoulfataoh@gmail.com>"]
readme = "README.md"
packages = [{include = "merge_pdf_files"}]

[tool.poetry.dependencies]
python = "^3.10"
pymupdf = "^1.22.3"
environs = "^9.5.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
